k8s/namespace.yml
kind: Namespace
apiVersion: v1
metadata:
  name: ingress-basic
  labels:
    name: ingress-basic
