k8s/deploy-weatherapp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-app
  namespace: ingress-basic  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather-app
  template:
    metadata:
      labels:
        app: weather-app
    spec:
      containers:
      - name: weather-app
        image: arindambanerjee/weatherapp:v1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: weather-app
  namespace: ingress-basic  
spec:
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: weather-app
